--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@ Date: 09/12/2025
 
             <!-- Bootstrap stuff for projects -->
             <section style="margin-top: 2em;">
-                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; padding-bottom: 25px;">
+                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; text-decoration: underline; text-underline-offset: 5px; padding-bottom: 25px; text-decoration-thickness: 1px;">
                     Graphic Design
                 </h3>
                 <div class="d-flex justify-content-center gap-5 text-center row">
@@ -69,7 +69,7 @@ Date: 09/12/2025
             </section>
 
             <section style="margin-top: 2em;">
-                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; padding-bottom: 40px;">
+                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; text-decoration: underline; text-underline-offset: 5px; padding-bottom: 40px; text-decoration-thickness: 1px;">
                     Audio Editing and Music Production
                 </h3>
                 <audio controls>
@@ -91,7 +91,7 @@ Date: 09/12/2025
             </section>
 
             <section style="margin-top: 2em;">
-                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; padding-bottom: 25px;">
+                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; text-decoration: underline; text-underline-offset: 5px; padding-bottom: 25px; text-decoration-thickness: 1px;">
                     Video Editing
                 </h3>
 
@@ -115,7 +115,7 @@ Date: 09/12/2025
             </section>
 
             <section style="margin-top: 2em;">
-                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; padding-bottom: 25px;">
+                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; text-decoration: underline; text-underline-offset: 5px; padding-bottom: 25px; text-decoration-thickness: 1px;">
                     Web Development
                 </h3>
                 <div class="d-flex justify-content-center gap-5 text-center row">
@@ -135,7 +135,7 @@ Date: 09/12/2025
             </section>
 
             <section style="margin-top: 2em;">
-                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; padding-bottom: 25px;">
+                <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; text-decoration: underline; text-underline-offset: 5px; padding-bottom: 25px; text-decoration-thickness: 1px;">
                     Mobile Application Development
                 </h3>
                 <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; font-size: 23px;">
